Caret drawn at incorrect position after typing a single LTR character in a blank RTL input field (or vice versa) while caret is visible. b=307533 r=uriber sr=bzbarsky